esqueci de criar a branch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="container-base">
+            <img src="assets/imagens/local-logo.png" alt="">
+        </div>
+    </header>
 </body>
 
 </html>
