html da página concluído

--- a/index.html
+++ b/index.html
@@ -13,9 +13,235 @@
 <body>
     <header>
         <div class="container-base">
-            <img src="assets/imagens/local-logo.png" alt="">
+            <img src="assets/imagens/local-logo.png" alt="icone logo">
+            <p>Agência de Viagens</p>
         </div>
     </header>
+
+    <main>
+        <section class="banner-formulario">
+            <div class="container-base">
+                <img src="assets/imagens/aviao.png" alt="icone avião">
+                <h1>Solicite um orçamento</h1>
+
+                <h2>Informe seus dados</h2>
+
+                <form action="https://www.devmedia.com.br/codigos/missao/front-end/agencia-de-viagens/
+                " method="post">
+                    <div class="form-div">
+                        <label for="idNome">Nome</label>
+                        <input type="text" name="nome" id="idNome" placeholder="Nome completo">
+                    </div>
+
+                    <div class="form-div">
+                        <label for="idEmail">Email</label>
+                        <input type="email" name="email" id="idEmail" placeholder="Email para contato">
+                    </div>
+
+                    <div class="form-div">
+                        <label for="idFone">Celular</label>
+                        <input type="tel" name="fone" id="idFone" placeholder="(xx) xxxxx-xxxx">
+                    </div>
+
+                    <div class="form-div form-div-menor">
+                        <label for="idIda">Data da ida</label>
+                        <input type="date" name="ida" id="idIda" min="2023-11-01">
+                    </div>
+
+                    <div class="form-div form-div-menor">
+                        <label for="idVolta">Data da Volta</label>
+                        <input type="date" name="volta" id="idVolta" min="2023-11-01">
+                    </div>
+
+                    <div class="form-div form-div-menor">
+                        <label for="idOrigem">Origem</label>
+                        <select name="origem" id="idOrigem">
+                            <option value="" selected disabled>Partindo de</option>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                            <option value="EX">Estrangeiro</option>
+                        </select>
+                    </div>
+
+                    <div class="form-div form-div-menor">
+                        <label for="idOrigem">Destino</label>
+                        <select name="destino" id="idDestino">
+                            <option value="" selected disabled>Partindo de</option>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                            <option value="EX">Estrangeiro</option>
+                        </select>
+                    </div>
+
+                    <div class="form-div">
+                        <p>Quarto com cama infatil?</p>
+
+                        <input type="radio" name="quarto" id="idQuarto" value="sim">
+                        <label for="idQuarto">Sim</label>
+
+                        <input type="radio" name="quarto" id="idQuarto" value="nao">
+                        <label for="idQuarto">Não</label>
+                    </div>
+
+                    <div class="form-div">
+                        <p>Preferência de hospedagem</p>
+
+                        <input type="checkbox" name="preferencia" id="idPiscina" value="piscina">
+                        <label for="idPiscina">Piscina</label>
+
+                        <input type="checkbox" name="preferencia" id="idWifi" value="wifi">
+                        <label for="idWifi">Wi-Fi</label>
+
+                        <input type="checkbox" name="preferencia" id="idGaragem" value="garagem">
+                        <label for="idGaragem">Garagem</label>
+
+                        <input type="checkbox" name="preferencia" id="idSuite" value="suite">
+                        <label for="idSuite">Suite</label>
+                    </div>
+                </form>
+            </div>
+        </section>
+
+        <section class="ofertas">
+            <div class="container-base">
+                <h3>Ofertas</h3>
+
+                <p>Com até 50% de desconto.</p>
+
+                <div class="galeria-imagem">
+                    <figure>
+                        <img src="assets/imagens/rio.jpg" alt="rio de janeiro">
+
+                        <figcaption>Rio de Janeiro</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="assets/imagens/manaus.jpg" alt="manaus">
+
+                        <figcaption>Manaus</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="assets/imagens/saopaulo.jpg" alt="saopaulo">
+
+                        <figcaption>São Paulo</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="assets/imagens/niteroi.jpg" alt="niteroi">
+
+                        <figcaption>Rio de Janeiro</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="assets/imagens/maranhao.jpg" alt="maranhão">
+
+                        <figcaption>Maranhão</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+        <section class="anuncio">
+            <div class="container-base">
+                <h3>Explore a Natureza</h3>
+
+                <p>Viaje conosco e veja o melhor que a natureza tem a oferecer.</p>
+
+                <div class="galeria-imagem">
+                    <div class="img-descricao">
+                        <img src="assets/imagens/lencol.jpg" alt="lencois maranhenses">
+
+                        <h4>Lençois Maranhenses, Brasil</h4>
+
+                        <p>Ida e volta a partir de R$79</p>
+                    </div>
+
+                    <div>
+                        <img src="assets/imagens/goias.jpg" alt="cachoeira">
+
+                        <h4>Cachoeira Santa Bárbara, Brasil</h4>
+
+                        <p>Ida e volta por R$139</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container-base">
+            <div class="contato">
+                <h3>Contato</h3>
+
+                <p><img src="assets/imagens/local.png" alt="local">Rio de Janeiro, RJ</p>
+
+                <p><img src="assets/imagens/telefone.png" alt="">Telefone: (21) 9999-9999</p>
+
+                <p><img src="assets/imagens/email.png" alt="">Email: contato@agencia.com.br</p>
+            </div>
+
+            <div class="redes-sociais">
+                <h3>Nossas Redes Sociais</h3>
+
+                <p><img src="assets/imagens/fb.png" alt="facebook">/AgenciaDeViagem</p>
+
+                <p><img src="assets/imagens/ig.png" alt="instagram">@AgenciaDeViagem</p>
+
+                <p><img src="assets/imagens/tt.png" alt="twitter">@AgenciaDeViagem</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
