--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Agencia, viagens, avião">
     <meta name="author" content="Robson Junior">
     <title>Projeto09 - Agencia de Viagens</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -148,6 +149,8 @@
                         <input type="checkbox" name="preferencia" id="idSuite" value="suite">
                         <label for="idSuite">Suite</label>
                     </div>
+
+                    <button type="submit">Solicitar Orçamento</button>
                 </form>
             </div>
         </section>
