--- a/index.html
+++ b/index.html
@@ -169,36 +169,40 @@
 
                 <p>Com até 50% de desconto.</p>
 
-                <div class="galeria-imagem">
-                    <figure>
-                        <img src="assets/imagens/rio.jpg" alt="rio de janeiro">
+                <div class="galeria-img">
+                    <div class="img-grande">
+                        <figure>
+                            <img src="assets/imagens/rio.jpg" alt="rio de janeiro">
 
-                        <figcaption>Rio de Janeiro</figcaption>
-                    </figure>
+                            <figcaption>Rio de Janeiro</figcaption>
+                        </figure>
+                    </div>
 
-                    <figure>
-                        <img src="assets/imagens/manaus.jpg" alt="manaus">
+                    <div class="img-mini">
+                        <figure>
+                            <img src="assets/imagens/manaus.jpg" alt="manaus">
 
-                        <figcaption>Manaus</figcaption>
-                    </figure>
+                            <figcaption>Manaus</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="assets/imagens/saopaulo.jpg" alt="saopaulo">
+                        <figure>
+                            <img src="assets/imagens/saopaulo.jpg" alt="saopaulo">
 
-                        <figcaption>São Paulo</figcaption>
-                    </figure>
+                            <figcaption>São Paulo</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="assets/imagens/niteroi.jpg" alt="niteroi">
+                        <figure>
+                            <img src="assets/imagens/niteroi.jpg" alt="niteroi">
 
-                        <figcaption>Rio de Janeiro</figcaption>
-                    </figure>
+                            <figcaption>Rio de Janeiro</figcaption>
+                        </figure>
 
-                    <figure>
-                        <img src="assets/imagens/maranhao.jpg" alt="maranhão">
-
-                        <figcaption>Maranhão</figcaption>
-                    </figure>
+                        <figure>
+                            <img src="assets/imagens/maranhao.jpg" alt="maranhão">
+                            
+                            <figcaption>Maranhão</figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
         </section>
@@ -209,21 +213,25 @@
 
                 <p>Viaje conosco e veja o melhor que a natureza tem a oferecer.</p>
 
-                <div class="galeria-imagem">
-                    <div class="img-descricao">
-                        <img src="assets/imagens/lencol.jpg" alt="lencois maranhenses">
-
-                        <h4>Lençois Maranhenses, Brasil</h4>
-
-                        <p>Ida e volta a partir de R$79</p>
+                <div class="galeria-img">
+                    <div class="img-grande">
+                        <div class="anuncio-div">
+                            <img src="assets/imagens/lencol.jpg" alt="lencois maranhenses">
+                            <div>
+                                <h4>Lençois Maranhenses, Brasil</h4>
+                                <p>Ida e volta a partir de R$79</p>
+                            </div>
+                        </div>
                     </div>
 
-                    <div>
-                        <img src="assets/imagens/goias.jpg" alt="cachoeira">
-
-                        <h4>Cachoeira Santa Bárbara, Brasil</h4>
-
-                        <p>Ida e volta por R$139</p>
+                    <div class="img-grande">
+                        <div class="anuncio-div">
+                            <img src="assets/imagens/goias.jpg" alt="cachoeira">
+                            <div>
+                                <h4>Cachoeira Santa Bárbara, Brasil</h4>
+                                <p>Ida e volta por R$139</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
